# samaquiz

./: .gitignore  .stylelintrc.js  Readme.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
backend/: Cargo.toml
backend/api-test-helper/: .env  Cargo.toml  Dockerfile  Dockerfile.dev  Readme.md  requests.http
backend/api-test-helper/src/: api_context.rs  config.rs  lib.rs  main.rs
backend/api-test-helper/src/app/: app_router.rs  mod.rs  reset_db_app.rs
backend/api-test-helper/src/db/: api_helper_repo.rs  app_repo.rs  mod.rs
backend/db-app/: .env  Cargo.toml  Dockerfile  Dockerfile.dev  README.md
backend/db-app/migrations/: 202411030716_users.sql  202412200122_quizzes.sql  202412261020_quiz_sessions.sql  202506022251_alter_users_add_avatar.sql  202506031502_alter_users_on_delete_cascade.sql  202506032300_drop_question_assets.sql
backend/db-app/src/: db_setup.rs  lib.rs  main.rs  util.rs
backend/db-app/src/seeds/: mod.rs  s010_users.rs  s020_quizzes.rs  s025_quiz_assets.rs  s030_questions.rs  s035_question_assets.rs  s040_answers.rs  s050_quiz_sessions.rs  s060_participants.rs
backend/lib-api/: Cargo.toml
backend/lib-api/src/: lib.rs
backend/lib-api/src/auth/: generate_jwt.rs  types.rs  verify_jwt.rs
backend/lib-api/src/clients/: s3_client.rs
backend/lib-api/src/db/: db_error.rs  db_setup.rs  mod.rs  password.rs  util.rs
backend/lib-api/src/error/: api_error.rs  helpers.rs
backend/lib-api/src/util/: conversion.rs  json_extractor.rs  log.rs  mod.rs
backend/lib-types/: Cargo.toml
backend/lib-types/src/: lib.rs  type_util.rs
backend/lib-types/src/dto/: mod.rs
backend/lib-types/src/dto/answer/: answer_view_model.rs  create_answer_dto.rs  mod.rs  update_answer_dto.rs
backend/lib-types/src/dto/auth/: confirm_email_dto.rs  login_dto.rs  mod.rs  public_key_view_model.rs  reset_password_dto.rs  update_password_dto.rs
backend/lib-types/src/dto/participant/: create_participant_dto.rs  get_participant_dto.rs  list_participants_dto.rs  mod.rs  participant_view_model.rs
backend/lib-types/src/dto/question/: create_question_dto.rs  get_question_dto.rs  mod.rs  question_view_model.rs  update_question_dto.rs
backend/lib-types/src/dto/question_asset/: create_question_asset_dto.rs  list_question_assets_dto.rs  mod.rs  question_asset_viewmodel.rs  update_question_asset_dto.rs  verify_question_asset_dto.rs
backend/lib-types/src/dto/quiz/: create_quiz_dto.rs  get_quiz_dto.rs  list_quizzes_dto.rs  mod.rs  quiz_view_model.rs  update_quiz_dto.rs
backend/lib-types/src/dto/quiz_asset/: create_quiz_asset_dto.rs  list_quiz_assets_dto.rs  mod.rs  quiz_asset_viewmodel.rs  update_quiz_asset_dto.rs  verify_quiz_asset_dto.rs
backend/lib-types/src/dto/quiz_response/: create_quiz_response_dto.rs  mod.rs
backend/lib-types/src/dto/quiz_session/: create_quiz_session_dto.rs  get_quiz_session_dto.rs  get_quiz_session_leaders.rs  get_quiz_session_participant_count_dto.rs  list_quiz_sessions_dto.rs  mod.rs  quiz_session_view_model.rs  update_quiz_session_dto.rs
backend/lib-types/src/dto/user/: get_user_dto.rs  list_users_dto.rs  mod.rs  register_user_dto.rs  update_user_dto.rs  user_view_model.rs
backend/lib-types/src/entity/: answer_entity.rs  mod.rs  participant_entity.rs  question_asset_entity.rs  question_entity.rs  quiz_asset_entity.rs  quiz_entity.rs  quiz_response_entity.rs  quiz_session_entity.rs  user_entity.rs
backend/lib-types/src/shared/: api_error.rs  asset.rs  mod.rs  question.rs  quiz.rs  quiz_session.rs  user.rs
backend/quizzo-api/: Cargo.toml  Dockerfile  Dockerfile.dev  README.md
backend/quizzo-api/src/: api_context.rs  config.rs  main.rs
backend/quizzo-api/src/app/: app_router.rs  mod.rs
backend/quizzo-api/src/app/answer/: create_answer.rs  delete_answer.rs  update_answer.rs
backend/quizzo-api/src/app/auth/: helpers.rs  login_user.rs  mod.rs  resend_confirm_email.rs
backend/quizzo-api/src/app/question/: create_question.rs  delete_question.rs  get_question.rs  helpers.rs  mod.rs  update_question.rs
backend/quizzo-api/src/app/quiz/: create_quiz.rs  get_quiz.rs
backend/quizzo-api/src/app/user/: get_user.rs  mod.rs  update_user.rs
backend/quizzo-api/src/db/: answer_repo.rs  app_repo.rs  mod.rs  question_asset_repo.rs  question_repo.rs  quiz_asset_repo.rs  quiz_repo.rs  user_repo.rs
backend/quizzo-api/src/util/: auth.rs
backend/samaquiz-api/: .env  Cargo.toml  Dockerfile  Dockerfile.dev  README.md
backend/samaquiz-api/src/: api_context.rs  lib.rs  main.rs
backend/samaquiz-api/src/app/: app_router.rs  helpers.rs  mod.rs
backend/samaquiz-api/src/app/answer/: create_answer.rs  delete_answer.rs  helpers.rs  mod.rs  update_answer.rs
backend/samaquiz-api/src/app/auth/: confirm_email.rs  reset_password.rs  update_password.rs
backend/samaquiz-api/src/app/participant/: create_participant.rs  get_participant.rs  helpers.rs  mod.rs
backend/samaquiz-api/src/app/question/: delete_question.rs  get_question.rs  helpers.rs  update_question.rs
backend/samaquiz-api/src/app/quiz/: delete_quiz.rs  helpers.rs  list_quizzes.rs  mod.rs  update_quiz.rs
backend/samaquiz-api/src/app/quiz_asset/: create_quiz_asset.rs  delete_quiz_asset.rs  helpers.rs  list_quiz_assets.rs  mod.rs  update_quiz_asset.rs  verify_quiz_asset.rs
backend/samaquiz-api/src/app/quiz_response/: create_quiz_response.rs  mod.rs
backend/samaquiz-api/src/app/quiz_session/: create_quiz_session.rs  get_quiz_session.rs  get_quiz_session_leaders.rs  get_quiz_session_participant_count.rs  helpers.rs  list_quiz_sessions.rs  mod.rs  update_quiz_session.rs
backend/samaquiz-api/src/app/user/: delete_user.rs  list_users.rs  mod.rs  register_user.rs  update_user.rs
backend/samaquiz-api/src/app/websocket/: mod.rs  ws_handler.rs  ws_helpers.rs  ws_state.rs
backend/samaquiz-api/src/db/: answer_repo.rs  app_repo.rs  mod.rs  participant_repo.rs  question_asset_repo.rs  question_repo.rs  quiz_asset_repo.rs  quiz_repo.rs  quiz_response_repo.rs  quiz_session_repo.rs  user_repo.rs
backend/samaquiz-api/src/util/: auth.rs
tools/: skaffold.api.yaml  (+2 more)
(+436 files in other folders)
