[workspace]

members = [
    "quizzo-api",
    "db-app",
    "api-test-helper",
    "lib-api",
    "lib-types",
]

[workspace.dependencies]
lib-api = { path = "./lib-api" }
lib-types = { path = "./lib-types" }
db-app = { path = "./db-app" }
aes = "0.8.4"
argon2 = "0.5.3"
axum = "0.7.7"
axum-extra = { version = "0.9.4", features = ["typed-header"] }
axum-macros = "0.4.1"
cbc = { version = "0.1.2", features = ["std"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
const_format = "0.2.32"
futures-util = { version = "0.3.30" }
lazy_static = "1.4.0"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
reqwest = { version = "0.12.7", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
serde_qs = "0.13.0"
sqlx = { version = "0.8.1", features = ["runtime-tokio-rustls", "chrono"] }
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.60"
tokio = "1.37.0"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tracing-bunyan-formatter = { default-features = false, version = "0.3" }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
validator = { version = "0.19", features = ["derive"] }
regex = "1.10.4"
rusty-s3 = "0.5.0"
tower = "0.4.13"
tracing-core = "0.1.32"
nu-ansi-term = "0.50.0"
file-rotate = "0.7.5"
urlencoding = "2.1.3"
dotenvy = "0.15.7"

[profile.dev]
opt-level = "z"
strip = true
