[workspace]

members = [
    "samaquiz-api",
    "db-app",
    "api-test-helper",
    "lib-api",
    "lib-types",
]

[workspace.dependencies]
lib-api = { path = "./lib-api" }
lib-types = { path = "./lib-types" }
db-app = { path = "./db-app" }
aes = "0.8.4"
argon2 = "0.5.3"
async-trait = "0.1.88"
axum = { git = "https://github.com/tokio-rs/axum", features = ["ws"] }
axum-extra = { git = "https://github.com/tokio-rs/axum", features = ["typed-header"] }
axum-macros = { git = "https://github.com/tokio-rs/axum" }
cbc = { version = "0.1.2", features = ["std"] }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.38", features = ["derive", "env"] }
const_format = "0.2.34"
dashmap = "6.1.0"
futures = "0.3.31"
futures-util = { version = "0.3.31", default-features = false, features = ["sink", "std"] }
lazy_static = "1.5.0"
jsonwebtoken = "9.3.1"
rand = "0.8.5"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_qs = "0.15.0"
sqlx = { version = "0.8.5", features = ["runtime-tokio-rustls", "chrono"] }
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
tokio = "1.45.0"
tower-http = { version = "0.6.4", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"
tracing-bunyan-formatter = { default-features = false, version = "0.3.10" }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
validator = { version = "0.20", features = ["derive"] }
regex = "1.11.1"
rusty-s3 = "0.7.0"
tower = "0.5.2"
tracing-core = "0.1.33"
nu-ansi-term = "0.50.1"
file-rotate = "0.8.0"
urlencoding = "2.1.3"
dotenvy = "0.15.7"

[profile.dev]
opt-level = "z"
strip = true
