[package]
name = "lib-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib_api"
path = "src/lib.rs"

[dependencies]
lib-types = { workspace = true }
aes = { workspace = true }
argon2 = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
axum-macros = { workspace = true }
cbc = { workspace = true }
chrono = { workspace = true }
lazy_static = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
sqlx = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = "1.45.0"
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
tracing-bunyan-formatter = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
regex = { workspace = true }
rusty-s3 = { workspace = true }
tower = { workspace = true }
tracing-core = { workspace = true }
nu-ansi-term = { workspace = true }
file-rotate = { workspace = true }
urlencoding = { workspace = true }
