[package]
name = "samaquiz-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-api = { workspace = true }
lib-types = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
axum-macros = { workspace = true }
clap = { workspace = true }
const_format = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_qs = { workspace = true }
sqlx = { version = "0.8.5", features = ["runtime-tokio-rustls", "any", "postgres", "migrate", "chrono"] }
strum = { workspace = true }
tokio = { version = "1.45.0", features = ["full"] }
tower = { version = "0.5.2", features = ["timeout"] }
tower-http = { version = "0.6.4", features = ["trace", "cors", "fs"] }
tracing = { workspace = true }
validator = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dotenvy = { workspace = true }
